--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
-    "dev": "node app/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm run services:up && node app/index.js",
+    "services:up": "docker-compose up",
+    "services:stop": "docker-compose stop",
+    "services:down": "docker-compose down"
   },
   "keywords": [],
   "author": "",
