--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
-    "dev": "npm run services:up && node app/index.js",
+    "dev": "node app/index.js",
     "services:up": "docker-compose up",
     "services:stop": "docker-compose stop",
     "services:down": "docker-compose down"
