--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
+version: "3"
+
 services:
+  app:
+    image: "node:14"
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+    depends_on:
+      - database
+
   database:
     image: "postgres:16.0-alpine3.18"
     hostname: db
@@ -7,4 +17,4 @@ services:
       POSTGRES_PASSWORD: 1234
       POSTGRES_DB: rinhadb
     ports:
-      - "8080:8080"
+      - "5432:5432"
