--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "app/index.js",
   "scripts": {
     "dev": "node app/index.js",
-    "services:up": "docker-compose up",
-    "services:stop": "docker-compose stop",
-    "services:down": "docker-compose down"
+    "services:up": "docker compose up",
+    "services:stop": "docker compose -f docker-compose.yml stop",
+    "services:down": "docker compose down"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
