--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       POSTGRES_USER: root
       POSTGRES_DB: rinhadb
       POSTGRES_PASSWORD: local_password
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
